<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="133dp" />

            <ImageView
                android:id="@+id/novigradlogo"
                android:layout_width="365dp"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="81dp"

                android:contentDescription="@string/novigrad_logo"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/novigradlogo" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:onClick="goToSignUp"
                android:text="@string/sign_up"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/noto_sans_bold"
                android:onClick="goToLogin"
                android:text="@string/log_in"
                android:textColor="#000000"

                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>