<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Welcome.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <ImageView
            android:id="@+id/novigradlogo"
            android:layout_width="246dp"
            android:layout_height="127dp"
            android:layout_gravity="center"
            android:contentDescription="@string/novigrad_logo"
            android:scaleType="centerCrop"
            android:src="@mipmap/novigradlogo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/logInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/noto_sans_bold"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="#000000"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtviewemail"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="Email: "
                android:textColor="#000000"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText

                android:id="@+id/email"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHighlight="#8BC34A"
                android:textColorLink="#265D0C" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtviewpassword"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/password"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHighlight="#8BC34A"
                android:textColorLink="#265D0C" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/log_in_button"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/createText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:text="@string/createText"
            android:textColor="#1E4D0C" />

    </LinearLayout>

</RelativeLayout>
